<resources>

    <string name="app_name">Prova Fácil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_ajuda">Ajuda</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_subtitulo">Sub Titulo</string>
    <string name="action_opcao1">Todas as Provas</string>
    <string name="action_opcao2">Adicionar Prova</string>
    <string name="action_opcao3">Ir para o site</string>
    <string name="action_sair">Sair</string>
    <string name="action_voltar">Voltar</string>
    <string name="action_como_funciona">Como funciona?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teste">TesteActivity</string>
</resources>
